deployment-definition.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: myapp-replicaset
  labels:
    app: myapp

spec:
  selector:
    matchlabels:
      app: myapp

  replicas: 3

  template:
    metadata:
      name: nginx-2 
      labels:
        app: myapp
    
    spec:
      conatiners:
        - name: nginx
          image: nginx
